# lidar_ground_segmentation

./: CMakeLists.txt  README.md  package.xml
launch/: lidar_ground_segmentation_node.launch
msg/: plane_equation.msg
src/: lidar_ground_segmentation_node.cpp
